Add client and server run options

--- a/veh-sim.vcxproj.filters
+++ b/veh-sim.vcxproj.filters
@@ -98,5 +98,8 @@
     <ClInclude Include="src\Simulation\PhysicsWorld.h">
       <Filter>Source Files\Simulation</Filter>
     </ClInclude>
+    <ClInclude Include="src\PlayerProtocol.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
