--- a/veh-sim.vcxproj
+++ b/veh-sim.vcxproj
@@ -47,11 +47,11 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_WIN32_WINNT=0x0601;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\third_party\bullet3\include\bullet;$(SolutionDir)..\third_party\glfw\include;$(SolutionDir)..\third_party\glfw-src\deps;$(SolutionDir)..\third_party\glm;$(SolutionDir)..\third_party\rapidjson;$(SolutionDir)..\third_party\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\third_party\boost_1_82_0;$(SolutionDir)..\third_party\bullet3\include\bullet;$(SolutionDir)..\third_party\glfw\include;$(SolutionDir)..\third_party\glfw-src\deps;$(SolutionDir)..\third_party\glm;$(SolutionDir)..\third_party\rapidjson;$(SolutionDir)..\third_party\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -66,11 +66,11 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_WIN32_WINNT=0x0601;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\third_party\bullet3\include\bullet;$(SolutionDir)..\third_party\glfw\include;$(SolutionDir)..\third_party\glfw-src\deps;$(SolutionDir)..\third_party\glm;$(SolutionDir)..\third_party\rapidjson;$(SolutionDir)..\third_party\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\third_party\boost_1_82_0;$(SolutionDir)..\third_party\bullet3\include\bullet;$(SolutionDir)..\third_party\glfw\include;$(SolutionDir)..\third_party\glfw-src\deps;$(SolutionDir)..\third_party\glm;$(SolutionDir)..\third_party\rapidjson;$(SolutionDir)..\third_party\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -105,6 +105,7 @@
     <ClInclude Include="src\Interface\ShapeDesc.h" />
     <ClInclude Include="src\Interface\Shapes.h" />
     <ClInclude Include="src\Interface\TextureMaps.h" />
+    <ClInclude Include="src\PlayerProtocol.h" />
     <ClInclude Include="src\Simulation\Actors.h" />
     <ClInclude Include="src\Simulation\GameWorld.h" />
     <ClInclude Include="src\Simulation\PhysicsWorld.h" />
