--- a/veh-sim.vcxproj.filters
+++ b/veh-sim.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="..\third_party\glfw-src\deps\glad_gl.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\PlayerProtocol.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Utils.h">
